fix: Letter Case overlapping in the Sidebar

--- a/src/blocks/components/typography-selector-control/editor.scss
+++ b/src/blocks/components/typography-selector-control/editor.scss
@@ -8,28 +8,6 @@
 		}
 	}
 
-	.o-two-column-components {
-		gap: 10px;
-		justify-content: space-between;
-		align-items: baseline;
-		display: grid;
-		justify-items: stretch;
-		grid-template-columns: 1fr 1fr;
-		max-height: 55px;
-
-		&> div:first-child:last-child {
-			grid-column: 1 / 3;
-		}
-
-		&> div > .components-base-control {
-			margin: 8px 0px;
-		}
-
-		&~ .o-two-column-components {
-			margin-top: 10px;
-		}
-	}
-
 	.components-font-size-picker__controls .components-base-control {
 		margin: 0 0 8px 0;
 	}
@@ -39,10 +17,6 @@
 	.o-typo-header {
 		padding-top: 0;
 	}
-}
-
-.o-options-global-defaults-modal .o-typo-component .o-two-column-components {
-	margin-bottom: 25px;
 }
 
 .block-editor-block-inspector, .o-options-global-defaults-modal {
